﻿0.7.2
=====

Bugfixes:

  * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
  * Fix MS SQL error when searching for user contributions (hanspeterklapf).
  * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.
    Reported by James.
  * Fix TOC rendering issue when depth exceeds the configured max depth.
  * Fix double-escaping of non-existent topic names when using URLs such as
    http://jamwiki.org/wiki/en/TestÜmlaut.  Reported by hanspeterklapf.
  * Fix breakage when moving topics containing special characters such as
    "TestÜmlaut".  Reported by hanspeterklapf.
  * Display any editable category topic text above the list of category items.
    Reported by axcelclk.
  * Fix failures when upgrading from versions earlier than 0.6.0.  Reported by
    Eric.
  * Groups were not being displayed on the Special:Roles page when no roles were
    assigned to the group.  Reported by hanspeterklapf.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Russian translations (shar).


0.7.1
=====

New Features:

  * Upgrade to Lucene Search 2.4.1.

Bugfixes:

  * Search by login on the Special:Roles page returned no results for users
    without at least one role.  Reported by tapaya and rebecca.
  * Fix incorrect LDAP sample configuration.  Reported with a fix by Tobias
    Kalbitz.
  * Display signatures even if there is no email addresss specified (axelclk).

Translation Updates:

  * Added Russian translations (shar).
  * Updated German translations (axelclk).
  * Updated Portugese (Brazilian) translations (leandes).


0.7.0
=====

New Features:

  * Login and authentication completely rewritten to take better advantage
    of Spring Security capabilities.
  * Special:OrphanedPages added to display un-linked pages (hanspeterklapf).
  * Remove ability to automatically upgrade from versions prior to 0.5.0.
  * "Next" and "prev" diff links added to Special:History to match Mediawiki.