@@ -5,6 +5,7 @@ Bugfixes:
 
   * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
   * Fix MS SQL error when searching for user contributions (hanspeterklapf).
+  * Fix MS SQL upgrade errors (hanspeterklapf).
   * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.
     Reported by James.
   * Fix TOC rendering issue when depth exceeds the configured max depth.
